--- a/Maintenance dashboard.Client/Views/BuiltFunctionControl.xaml
+++ b/Maintenance dashboard.Client/Views/BuiltFunctionControl.xaml
@@ -2,9 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MaintenanceDashboard.Client.Views" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             mc:Ignorable="d" Width="400" Height="450">
     <Grid>
         <Rectangle Fill="White"  RadiusX="15" RadiusY="15" 
                        RenderTransformOrigin="0.5,0.5">
