--- a/Maintenance dashboard.Client/Views/CreateEmployeeControl.xaml
+++ b/Maintenance dashboard.Client/Views/CreateEmployeeControl.xaml
@@ -9,32 +9,15 @@
              d:DataContext="{d:DesignInstance viewModels:EmployeeViewModel}"
              Width="750" Height="550" HorizontalAlignment="Left" VerticalAlignment="Top" >
     <Grid Width="730">
-        <Border CornerRadius="20" >
-            <Border.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FF2281D1"/>
-                    <GradientStop Color="#FF34288B" Offset="1"/>
-                    <GradientStop Color="#FF33288B" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.Background>
-        </Border>
-
-        <Rectangle Fill="White" Margin="15,85,15, 15" RadiusX="15" RadiusY="15" 
-                       RenderTransformOrigin="0.5,0.5" >
-            <Rectangle.Effect>
-                <DropShadowEffect BlurRadius="10" RenderingBias="Quality" Direction="0" Color="#FFBBBBBB" 
-                                      ShadowDepth="1"/>
-            </Rectangle.Effect>
-        </Rectangle>
+        <ContentControl Style="{StaticResource RectangleView}"/>
 
         <ContentControl Style="{StaticResource AddingRecordGridTemplete}"/>
 
-        <Grid x:Name="gridPrincipal" Margin="15,85,15, 15" Width="700" Height="410">
+        <Grid Margin="15,85,15, 15" Width="700" Height="410">
             <TextBlock Text="DODAWANIE PRACOWNIKÓW" HorizontalAlignment="Center" VerticalAlignment="Top"  
                            FontSize="18"  Foreground="Gray" />
 
             <StackPanel HorizontalAlignment="Center" Margin="25" VerticalAlignment="Center" Style="{StaticResource AddingRecordDataTemplete}">
-                
                 <WrapPanel>
                     <materialDesign:PackIcon Kind="User" VerticalAlignment="Center" Width="30" Height="30"/>
                     <TextBox  Width="220" materialDesign:HintAssist.Hint="Imie" 
@@ -51,17 +34,9 @@
                              Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
                 </WrapPanel>
 
-                <WrapPanel>
-                    <materialDesign:PackIcon Kind="Code" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="220" 
-                              materialDesign:HintAssist.HelperText="" 
-                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
-                              Text="{Binding UidCode, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
-                </WrapPanel>
-                <Button  x:Name="btnAddEmployee" Height="25"  Background="#FF0069C0"  
+                <Button Height="25"  Background="#FF0069C0"  
                              BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1"
                              Command="{Binding CreateEmployeeCommand}"/>
-
             </StackPanel>
         </Grid>
     </Grid>
