--- a/Maintenance dashboard.Client/MainWindow.xaml
+++ b/Maintenance dashboard.Client/MainWindow.xaml
@@ -75,11 +75,11 @@
                                 <PasswordBox x:Name="PasswordBox" Margin="8" materialDesign:HintAssist.Hint="Hasło"
                                              materialDesign:TextFieldAssist.HasClearButton="True" 
                                              materialDesign:HintAssist.HelperText="Wpisz hasło"/>
-                                
+
                                 <Button x:Name="btnSavePassword" Click="btnSavePassword_Click" 
                                         Style="{StaticResource MaterialDesignFlatButton}" Margin="8" FontSize="12" 
                                         ToolTip="MaterialDesignFlatButton" Content="AKCEPTUJ"/>
-                                
+
                             </StackPanel>
                         </materialDesign:PopupBox>
                         <TextBlock Text="Logowanie" FontSize="8" Foreground="Gray"/>
@@ -92,11 +92,14 @@
                         <TextBlock Text="Wylogowanie" FontSize="8" Foreground="Gray"/>
                     </StackPanel>
 
-                    <Button x:Name="btnCloseWindow" Width="30" Height="30" IsEnabled="False"
+                    <StackPanel VerticalAlignment="Top" Margin="10">
+                        <Button x:Name="btnCloseWindow" Width="15" Height="22" IsEnabled="False"
                             Background="{x:Null}" BorderBrush="{x:Null}" 
                             Padding="0" Foreground="Gray" Click="btnCloseWindow_Click">
-                        <materialDesign:PackIcon Kind="Power" Width="22" Height="22"/>
-                    </Button>
+                            <materialDesign:PackIcon Kind="Power" Width="15" Height="15"/>
+                        </Button>
+                        <TextBlock Text="Zamknij" FontSize="8" Foreground="Gray"/>
+                    </StackPanel>
 
                 </StackPanel>
             </Grid>
@@ -139,7 +142,7 @@
                                        VerticalAlignment="Center" Margin="20 0" />
                         </StackPanel>
                     </ListViewItem>
-                    <ListViewItem Height="60" Foreground="LightGray">
+                    <ListViewItem x:Name="itemRegisterTool" Height="60" Foreground="LightGray" IsEnabled="False">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="Tools" Width="30" Height="30" 
                                                      VerticalAlignment="Center" Margin="5"/>
