--- a/Maintenance dashboard.Client/Views/AcceptancePaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/AcceptancePaddleControl.xaml
@@ -47,7 +47,7 @@
                 </WrapPanel>
 
                 <DatePicker materialDesign:HintAssist.Hint="Data dodania"   Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" 
-                            Grid.Row="4" Grid.Column="0"  Width="240" SelectedDate="{Binding AddedDate}" HorizontalAlignment="Center" />
+                            Grid.Row="4" Grid.Column="0"  Width="240" SelectedDate="{Binding AddedDate}" HorizontalAlignment="Center" SelectedDateFormat="Long"/>
 
 
                 <WrapPanel Grid.Column="0" Grid.Row="3">
@@ -63,7 +63,7 @@
 
 
                 <DatePicker materialDesign:HintAssist.Hint="Data planowanej naprawy"   Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" 
-                            Grid.Row="4" Grid.Column="0"  Width="240" SelectedDate="{Binding PlannedRepairDate}" HorizontalAlignment="Center" />
+                            Grid.Row="4" Grid.Column="0"  Width="240" SelectedDate="{Binding PlannedRepairDate}" HorizontalAlignment="Center" SelectedDateFormat="Long"/>
 
                 <WrapPanel Grid.Column="0" Grid.Row="5">
                     <materialDesign:PackIcon Kind="ShoppingCartMinus" VerticalAlignment="Center" Width="30" Height="30"/>
