--- a/Maintenance dashboard.Client/Views/EditPaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/EditPaddleControl.xaml
@@ -15,8 +15,8 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="120"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="520"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
@@ -24,13 +24,13 @@
                            FontSize="18" Grid.Column="0" Grid.Row="0" Foreground="Gray" Grid.ColumnSpan="2" Margin="20"/>
 
             <DataGrid ItemsSource="{Binding Paddles}" SelectedItem="{Binding SelectedPaddle}" IsReadOnly="True"
-                          Grid.Column="1" Grid.Row="1"  Margin="10,10,0,10" Background="White" AutoGenerateColumns="False" HorizontalAlignment="Left" Width="460">
+                          Grid.Column="1" Grid.Row="1"  Margin="10,10,0,10" Background="White" AutoGenerateColumns="False" 
+                      HorizontalAlignment="Left" Height="400" Width="560">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
                     <DataGridTextColumn Header="Numer" Binding="{Binding Number}"/>
                     <DataGridTextColumn Header="Model" Binding="{Binding Model}"/>
                     <DataGridTextColumn Header="Data dodania" Binding="{Binding AddedDate}"/>
-                    <DataGridTextColumn Header="Data ostatniej prewencji" Binding="{Binding LastPrevention}"/>
+                    <DataGridTextColumn Header="Ostatnia prewencja" Binding="{Binding LastPrevention}"/>
                     <DataGridTextColumn Header="Uwagi" Binding="{Binding Comments}"/>
                 </DataGrid.Columns>
             </DataGrid>
@@ -38,7 +38,7 @@
             <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
                 <WrapPanel>
                     <materialDesign:PackIcon Kind="Identifier" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox Width="250"  IsEnabled="False"  materialDesign:HintAssist.Hint="Id" 
+                    <TextBox Width="220"  IsEnabled="False"  materialDesign:HintAssist.Hint="Id" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                              Text="{Binding SelectedPaddle.Id, 
                              UpdateSourceTrigger=PropertyChanged, 
@@ -48,21 +48,21 @@
 
                 <WrapPanel>
                     <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  materialDesign:HintAssist.Hint="Numer paletki" Width="250" IsEnabled="False"
+                    <TextBox  materialDesign:HintAssist.Hint="Numer paletki" Width="220" IsEnabled="False"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding SelectedPaddle.Number}" />
                 </WrapPanel>
 
                 <WrapPanel>
                     <materialDesign:PackIcon Kind="Tools" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  Width="250" materialDesign:HintAssist.Hint="Model" IsEnabled="False"
+                    <TextBox  Width="220" materialDesign:HintAssist.Hint="Model" IsEnabled="False"
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
                              Text="{Binding SelectedPaddle.Model}" Margin="10"/>
                 </WrapPanel>
 
                 <WrapPanel>
                     <materialDesign:PackIcon Kind="CalendarAdd" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  materialDesign:HintAssist.Hint="Data dodania" Width="250" 
+                    <TextBox  materialDesign:HintAssist.Hint="Data dodania" Width="220" 
                               materialDesign:HintAssist.HelperText=""  IsEnabled="False"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding SelectedPaddle.AddedDate}"/>
@@ -70,7 +70,7 @@
 
                 <WrapPanel>
                     <materialDesign:PackIcon Kind="CalendarSync" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  materialDesign:HintAssist.Hint="Data ostatniej prewencji" Width="250" 
+                    <TextBox  materialDesign:HintAssist.Hint="Data ostatniej prewencji" Width="220" 
                               materialDesign:HintAssist.HelperText=""  IsEnabled="False"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding SelectedPaddle.LastPrevention}"/>
@@ -78,7 +78,7 @@
 
                 <WrapPanel>
                     <materialDesign:PackIcon Kind="NoteTextOutline" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  materialDesign:HintAssist.Hint="Uwagi" Width="250" 
+                    <TextBox  materialDesign:HintAssist.Hint="Uwagi" Width="220" 
                               materialDesign:HintAssist.HelperText=""  
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding SelectedPaddle.Comments, 
