--- a/Maintenance dashboard.Client/MainWindow.xaml
+++ b/Maintenance dashboard.Client/MainWindow.xaml
@@ -92,7 +92,7 @@
                     </StackPanel>
 
                     <StackPanel VerticalAlignment="Top" Margin="10">
-                        <Button x:Name="btnCloseWindow" Width="15" Height="22" IsEnabled="False"
+                        <Button x:Name="btnCloseWindow" Width="15" Height="22" IsEnabled="True"
                             Background="{x:Null}" BorderBrush="{x:Null}" 
                             Padding="0" Foreground="Gray" Click="btnCloseWindow_Click">
                             <materialDesign:PackIcon Kind="Power" Width="15" Height="15"/>
