--- a/Maintenance dashboard.Client/Views/SpendPaddle.xaml
+++ b/Maintenance dashboard.Client/Views/SpendPaddle.xaml
@@ -101,7 +101,8 @@
                     </WrapPanel>
 
                     <Button Height="25"  Background="#FF0069C0" 
-                             BorderBrush="#FF0069C0"  Width="110" Content="WYDAJ" Margin="10" Command="{Binding SpendPaddleCommand}" />
+                             BorderBrush="#FF0069C0"  Width="110" Content="WYDAJ" 
+                            Margin="10" Command="{Binding SpendPaddleCommand}" />
                 </StackPanel>
 
                 <DataGrid ItemsSource="{Binding ReceivedPaddles}" SelectedItem="{Binding SelectedReceivedPaddle}"  Margin="10,10,0,10" 
