--- a/Maintenance dashboard.Client/MainWindow.xaml
+++ b/Maintenance dashboard.Client/MainWindow.xaml
@@ -39,7 +39,7 @@
                                            881766346 <LineBreak/>
                                            michalgornik93@outlook.com <LineBreak/>
                                            MaintenanceDashboard<LineBreak/>
-                                           Vesion 1.0.7 <LineBreak/>
+                                           Vesion 1.0.8 <LineBreak/>
 
                                 </TextBlock>
                             </StackPanel>
@@ -92,7 +92,7 @@
                     </StackPanel>
 
                     <StackPanel VerticalAlignment="Top" Margin="10">
-                        <Button x:Name="btnCloseWindow" Width="15" Height="22" IsEnabled="True"
+                        <Button x:Name="btnCloseWindow" Width="15" Height="22" IsEnabled="False"
                             Background="{x:Null}" BorderBrush="{x:Null}" 
                             Padding="0" Foreground="Gray" Click="btnCloseWindow_Click">
                             <materialDesign:PackIcon Kind="Power" Width="15" Height="15"/>
