--- a/Maintenance dashboard.Client/MainWindow.xaml
+++ b/Maintenance dashboard.Client/MainWindow.xaml
@@ -36,10 +36,9 @@
                                 <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" FontSize="12"
                                            HorizontalAlignment="Center" Margin="8" Foreground="Gray" TextWrapping="Wrap"> 
                                            Development by Michał Górnik <LineBreak/>
-                                           881766346 <LineBreak/>
                                            michalgornik93@outlook.com <LineBreak/>
                                            MaintenanceDashboard<LineBreak/>
-                                           Vesion 1.0.8 <LineBreak/>
+                                           Vesion 1.0.9 <LineBreak/>
 
                                 </TextBlock>
                             </StackPanel>
@@ -92,7 +91,7 @@
                     </StackPanel>
 
                     <StackPanel VerticalAlignment="Top" Margin="10">
-                        <Button x:Name="btnCloseWindow" Width="15" Height="22" IsEnabled="False"
+                        <Button x:Name="btnCloseWindow" Width="15" Height="22" IsEnabled="True"
                             Background="{x:Null}" BorderBrush="{x:Null}" 
                             Padding="0" Foreground="Gray" Click="btnCloseWindow_Click">
                             <materialDesign:PackIcon Kind="Power" Width="15" Height="15"/>
