--- a/Maintenance dashboard.Client/Views/ManagerPaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/ManagerPaddleControl.xaml
@@ -15,12 +15,12 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="4" Grid.Row="0" >
-            <RadioButton x:Name="btnOpenGetPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" Content="PRZYJECIE PALETKI" Checked="btnOpenAcceptancePaddle_Checked" FontSize="12"/>
-            <RadioButton x:Name="btnOpenPutPaddle" Style="{StaticResource MaterialDesignTabRadioButton}"  Content="WYDANIE PALETKI" Checked="btnOpenReleasePaddle_Checked" FontSize="12"/>
-            <RadioButton x:Name="btnOpenAddPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" Content="DODANIE NOWYCH PALETEK" Checked="btnOpenAddPaddle_Checked" FontSize="12"/>
-            <RadioButton x:Name="btnOpenEditPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" Content="EDYCJA ISTNIEJĄCYCH PALETEK" Checked="btnOpenEditPaddle_Checked" FontSize="12"/>
-            <RadioButton x:Name="btnOpenPerformedActivitiesList" Style="{StaticResource MaterialDesignTabRadioButton}" Content="PRZEGLĄD WYKONANYCH CZYNNOSCI" Checked="btnOpenPerformedActivitiesList_Checked" FontSize="12"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="4" Grid.Row="0" Width="920">
+            <RadioButton x:Name="btnOpenGetPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" Content="  PRZYJECIE PALETKI  " Checked="btnOpenAcceptancePaddle_Checked" FontSize="12"/>
+            <RadioButton x:Name="btnOpenPutPaddle" Style="{StaticResource MaterialDesignTabRadioButton}"  Content="  WYDANIE PALETKI  " Checked="btnOpenReleasePaddle_Checked" FontSize="12"/>
+            <RadioButton x:Name="btnOpenAddPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" Content="  DODANIE PALETEK  " Checked="btnOpenAddPaddle_Checked" FontSize="12"/>
+            <RadioButton x:Name="btnOpenEditPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" Content="  EDYCJA PALETEK  " Checked="btnOpenEditPaddle_Checked" FontSize="12"/>
+            <RadioButton x:Name="btnOpenPerformedActivitiesList" Style="{StaticResource MaterialDesignTabRadioButton}" Content="  PRZEGLĄD CZYNNOŚCI  " Checked="btnOpenPerformedActivitiesList_Checked" FontSize="12"/>
         </StackPanel>
 
         <Grid x:Name="GridPrincipal" Grid.Row="1" Width="920" Height="750" HorizontalAlignment="Center"/>
