--- a/Maintenance dashboard.Client/Views/CreatePaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/CreatePaddleControl.xaml
@@ -15,7 +15,7 @@
 
 
         <Grid Margin="15,80,15, 15">
-            <TextBlock Text="DODANIE NOWYCH PALETEK" HorizontalAlignment="Center" VerticalAlignment="Top"  
+            <TextBlock Text="DODANIE PALETEK" HorizontalAlignment="Center" VerticalAlignment="Top"  
                            FontSize="18"  Foreground="Gray" Margin="18"/>
 
             <StackPanel HorizontalAlignment="Center"  VerticalAlignment="Center" Style="{StaticResource AddingRecordDataTemplete}">
